Bug fixes on image : Avoid images to be stretched and images are well left positioned

--- a/styles/global.css
+++ b/styles/global.css
@@ -313,7 +313,8 @@ h2, h3 { page-break-after: avoid; }
 }
 
 .upfront-output-image .upfront-image-container img {
-    max-width: 100%;
+    /*max-width: 100%;*/
+    max-width: none;
 }
 
 .uf-responsive #page .post_content > * {
